# phoebe_description

./: CMakeLists.txt  package.xml
meshes/: arm_attachment_plate_v1.stl  back_bumper_plate_v1.stl  bot_base_new_v6.stl  caster_wheel_3.stl  caster_wheel_base_plate_v1.stl  caster_wheel_fork_v3.stl  central_plate_v1.stl  front_bumper_plate_v5.stl  side_pillar_v2.stl  top_lidar_component_new_v4.stl  wheel.stl
urdf/: phoebe.urdf
