<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phoebe_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="johannes.jyrgenson@gmail.com">johannes</maintainer>
  <license>TODO: License declaration</license>

    <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>xacro</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
